<resources>
    <string name="app_name">Notification</string>
    <string name="Name">Enter your name</string>
    <string name="BTN_Signup">Sign Up</string>
    <string name="Email">Email</string>
    <string name="phone">Telephone</string>
    <string name="password">Password</string>
    <string name="re_password">Re-Type Password</string>
    <string name="register">Register</string>
    <string name="cancle">Cancle</string>
</resources>
